bug squashing

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Orbitron', Helvetica, sans-serif;
-  font-size: 30px;
+  font-size: 25px;
   font-weight: lighter;
 }
 
@@ -52,4 +52,7 @@ body {
 }
 .button:active {
   color: darkred;
+}
+.footnote {
+  font-size: 0.8rem;
 }
